Make endpoints consistent
